--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -1,11 +1,11 @@
 //change variables below to customize the tuxedo framework
 
 //colors
-$dark: #262525;
-$dark-grey: #5c5c5c;
-$md-grey: #c8c8c8;
-$light: #f4f4f4;
-$color-pop: #2A7F62; 
+$dark: #2D3633;
+$dark-grey: #5D5E60;
+$md-grey: #8D8D92;
+$light: #EAEAEA;
+$color-pop: #DD6E42;
 
 //fonts - to update, import a new font below
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans:100i,300,700,700i|Lato:300,400,700');
