--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,14 @@
-<%= image_tag 'bw1.jpg', class: 'home-image' %>
-<h2><span>Flagrant</span> <span>Orange</span></h2>
+<div class="home">
+  <%= image_tag 'bw2.jpg', class: 'home-image' %>
+  <div class="navigation">
+    <h1><span class="light">Flagrant</span> <span class="pop">Orange</span></h1>
+    <h2 class="link">Music</h2>
+    <h2 class="link">Shows</h2>
+    <h2 class="link">Contact</h2>
+  </div>
+</div>
+
+
 <!--links -->
 <!--move up to be on picture-->
 <!--move to top or bottom for mobile view -->
