--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,9 +2,9 @@
   <%= image_tag 'bw2.jpg', class: 'home-image' %>
   <div class="navigation">
     <h1><span class="light">Flagrant</span> <span class="pop">Orange</span></h1>
-    <h2 class="link">Music</h2>
-    <h2 class="link">Shows</h2>
-    <h2 class="link">Contact</h2>
+    <h2 class="link"><%= link_to 'Music', music_path %></h2>
+    <h2 class="link"><%= link_to 'Shows', shows_path %></h2>
+    <h2 class="link"><%= link_to 'Contact', contact_path %></h2>
   </div>
 </div>
 
