--- a/app/views/music/index.html.erb
+++ b/app/views/music/index.html.erb
@@ -1,1 +1,11 @@
-hey hey
+<div class="regular-navigation">
+  <h1><a href="/"><span class="light">Flagrant</span> <span class="pop">Orange</span></a></h1>
+  <h2 class="link"><%= link_to 'Music', music_path %></h2>
+  <h2 class="link"><%= link_to 'Shows', shows_path %></h2>
+  <h2 class="link"><%= link_to 'Contact', contact_path %></h2>
+</div>
+<div class="container">
+  <div class="soundcloud">
+    <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/292463638&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+  </div>
+</div>
