--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -1,1 +1,22 @@
-contact page
+<div class="regular-navigation">
+  <h1><a href="/"><span class="light">Flagrant</span> <span class="pop">Orange</span></a></h1>
+  <h2 class="link"><%= link_to 'Music', music_path %></h2>
+  <h2 class="link"><%= link_to 'Shows', shows_path %></h2>
+  <h2 class="active">Contact</h2>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-6">
+      <h2 class="active">Social</h2>
+        <p>Facebook icon</p>
+      <h2 class="active">Booking</h2>
+        <p>Misty</p> - make safe links
+        <p>Eric</p>
+      <h2 class="active">Newsletter</h2>
+        <p>sign up form</p>
+    </div>
+    <div class="col-6">
+      <%= image_tag 'bw4.jpg', class: 'regular-image' %>
+    </div>
+  </div>
+</div>
