--- a/app/views/music/index.html.erb
+++ b/app/views/music/index.html.erb
@@ -1,6 +1,6 @@
 <div class="regular-navigation">
   <h1><a href="/"><span class="light">Flagrant</span> <span class="pop">Orange</span></a></h1>
-  <h2 class="link"><%= link_to 'Music', music_path %></h2>
+  <h2 class="active">Music</h2>
   <h2 class="link"><%= link_to 'Shows', shows_path %></h2>
   <h2 class="link"><%= link_to 'Contact', contact_path %></h2>
 </div>
