Mailchimp form styling

--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -1,5 +1,5 @@
 form {
-  margin: auto; //centers forms
+  // margin: auto; //centers forms
   padding: 40px;
 }
 [class*="form-divide"] { // Form-divide styling
