--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -101,6 +101,11 @@ body {
   width: 10%;
 }
 
+.subscribe-form {
+  padding: 0px;
+  width: 50%;
+}
+
 // [class*="counter"] span {
 //   font-size: 25px;
 //   position: absolute;
