--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -4,22 +4,25 @@
   <h2 class="link"><%= link_to 'Shows', shows_path %></h2>
   <h2 class="active">Contact</h2>
 </div>
-<div class="container">
-  <div class="row">
-    <div class="col-6">
-      <h2 class="active">Social</h2>
-        <%= link_to image_tag("fb.png", class: 'icon'), "https://www.facebook.com/FlagrantOrange/" %>
-      <h2 class="active">Booking</h2>
-        <p><%= mail_to "misty@flagrantorange.com", "misty@flagrantorange.com", encode: "hex" %></p>
-        <p><%= mail_to "eric@flagrantorange.com", "eric@flagrantorange.com", encode: "hex" %></p>
-      <h2 class="active">Newsletter</h2>
-      <%= form_tag '/subscribe', method: :post, class: 'subscribe-form' do %>
-        <%= email_field_tag :email, nil, class: 'input-light', placeholder: 'Email' %>
-        <%= submit_tag 'Subscribe', :class => 'btn btn-dark' %>
-      <% end %>
-    </div>
-    <div class="col-6">
-      <%= image_tag 'bw4.jpg', class: 'regular-image' %>
-    </div>
+
+<div class="row shows">
+  <div class="col-4">
+    <h2>Social</h2>
+      <%= link_to image_tag("fb.png", class: 'icon'), "https://www.facebook.com/FlagrantOrange/" %>
   </div>
+  <div class="col-4">
+    <h2>Booking</h2>
+      <p><%= mail_to "misty@flagrantorange.com", "misty@flagrantorange.com", encode: "hex" %></p>
+      <p><%= mail_to "eric@flagrantorange.com", "eric@flagrantorange.com", encode: "hex" %></p>
+  </div>
+  <div class="col-4">
+    <h2>Newsletter</h2>
+    <%= form_tag '/subscribe', method: :post, class: 'subscribe-form' do %>
+      <%= email_field_tag :email, nil, class: 'input-light', placeholder: 'Email' %>
+      <%= submit_tag 'Subscribe', :class => 'btn btn-dark' %>
+    <% end %>
+  </div>
+</div>
+<div class="row shows">
+  <%= image_tag 'bw4.jpg', class: 'regular-image' %>
 </div>
