--- a/app/views/music/index.html.erb
+++ b/app/views/music/index.html.erb
@@ -5,7 +5,7 @@
   <h2 class="link"><%= link_to 'Contact', contact_path %></h2>
 </div>
 
-<div class="container">
+<!-- <div class="container">
   <div class="f-row responsive">
     <div class="f-col-1">
         <iframe width="100%" scrolling="no" height="100%" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/292463638&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
@@ -14,4 +14,14 @@
       <%= image_tag 'bw5.jpg', class: 'regular-image' %>
     </div>
   </div>
+</div> -->
+
+
+  <div class="row soundcloud">
+    <iframe width="100%" scrolling="no" height="450" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/292463638&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+  </div>
+
+
+<div class="row shows">
+  <%= image_tag 'bw5.jpg', class: 'regular-image' %>
 </div>
