--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,7 +23,8 @@ body {
 .home-image {
   width: 90vw;
   margin-top: 5%;
-  margin-left: 5%;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 5%;
   border: 3px solid $dark;
   display: block;
@@ -40,6 +41,24 @@ body {
   left: 10%;
 }
 
+@media screen and (max-width: 650px) {
+  .navigation {
+    position: relative;
+    text-align: center;
+    top: 0;
+    left: 0;
+    .pop {
+      color: $dark;
+    }
+    .link {
+      color: $dark-grey;
+    }
+    .link a:hover {
+      color: $light;
+    }
+  }
+}
+
 .shows {
   width: 80vw;
   margin-left: 10%;
@@ -51,7 +70,7 @@ body {
   width: 50vw;
   margin-left: 25%;
   margin-right: 25%;
-  margin-top: 5%;
+  margin-top: 2%;
   margin-bottom: 5%;
 }
 
