--- a/app/views/music/index.html.erb
+++ b/app/views/music/index.html.erb
@@ -5,6 +5,13 @@
   <h2 class="link"><%= link_to 'Contact', contact_path %></h2>
 </div>
 
+<div class="mobile-navigation">
+  <h1 class="text-center"><a href="/"><span class="light">Flagrant</span> <span class="pop">Orange</span></a></h1>
+  <h2 class="active">Music</h2>
+  <h2 class="link"><%= link_to 'Shows', shows_path %></h2>
+  <h2 class="link"><%= link_to 'Contact', contact_path %></h2>
+</div>
+
 <!-- <div class="container">
   <div class="f-row responsive">
     <div class="f-col-1">
