--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -5,17 +5,24 @@
   <h2 class="active">Contact</h2>
 </div>
 
+<div class="mobile-navigation">
+  <h1 class="text-center"><a href="/"><span class="light">Flagrant</span> <span class="pop">Orange</span></a></h1>
+  <h2 class="link"><%= link_to 'Music', music_path %></h2>
+  <h2 class="link"><%= link_to 'Shows', shows_path %></h2>
+  <h2 class="active">Contact</h2>
+</div>
+
 <div class="row shows">
-  <div class="col-4">
+  <div class="col-4 contact">
     <h2>Social</h2>
       <%= link_to image_tag("fb.png", class: 'icon'), "https://www.facebook.com/FlagrantOrange/" %>
   </div>
-  <div class="col-4">
+  <div class="col-4 contact">
     <h2>Booking</h2>
       <p><%= mail_to "misty@flagrantorange.com", "misty@flagrantorange.com", encode: "hex" %></p>
       <p><%= mail_to "eric@flagrantorange.com", "eric@flagrantorange.com", encode: "hex" %></p>
   </div>
-  <div class="col-4">
+  <div class="col-4 contact">
     <h2>Newsletter</h2>
     <%= form_tag '/subscribe', method: :post, class: 'subscribe-form' do %>
       <%= email_field_tag :email, nil, class: 'input-light', placeholder: 'Email' %>
