Add favicon and titles for pages

--- a/app/views/music/index.html.erb
+++ b/app/views/music/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:title, "Flagrant Orange | Music") %>
+
 <div class="regular-navigation">
   <h1><a href="/"><span class="light">Flagrant</span> <span class="pop">Orange</span></a></h1>
   <h2 class="active">Music</h2>
