--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:title, "Flagrant Orange") %>
+
 <div class="home">
   <%= image_tag 'bw2.jpg', class: 'home-image' %>
   <div class="navigation">
