--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,12 @@ body {
   background-color: $color-pop;
 }
 
+.regular-navigation {
+  margin-top: 20px;
+  // .light:hover + .pop, .pop:hover + .light, .pop:hover, .light:hover {
+  //   color: $dark-grey;
+  // }
+}
 
 .home {
   position: relative;
@@ -83,24 +89,10 @@ body {
   border: 1px solid $dark-grey;
 }
 
-.regular-navigation {
-  margin-top: 20px;
-  // h1 a .pop:hover, h1 a .light:hover {
-  //   color: $dark-grey;
-  // }
-}
-
-// a h1:hover {
-//   color: $dark-grey;
-// }
-
 
 .mobile-navigation {
   display: none;
   text-align: center;
-  // h1 a .pop:hover, h1 a .light:hover {
-  //   color: $dark-grey;
-  // }
   h2 {
     display: inline;
     padding: 2%;
