--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,11 +31,12 @@ body {
   display: none;
 }
 
-.songs {
-  text-align: center;
-  h3 {
-    margin-bottom: 0;
-  }
+.show-lyrics, .hide-lyrics {
+  margin-bottom: 0;
+}
+
+.show-lyrics:hover, .hide-lyrics:hover {
+  color: $light;
 }
 
 .home {
