--- a/app/views/shows/index.html.erb
+++ b/app/views/shows/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="regular-navigation">
   <%= link_to root_path do %>
-    <h1><span class="light">Flagrant</span> <span class="pop">Orange</span></h1>
+    <h1 class="home"><span class="light">Flagrant</span> <span class="pop">Orange</span></h1>
   <% end %>
   <h2 class="link"><%= link_to 'Music', music_path %></h2>
   <h2 class="active">Shows</h2>
@@ -11,7 +11,7 @@
 
 <div class="mobile-navigation">
   <%= link_to root_path do %>
-    <h1 class="text-center"><span class="light">Flagrant</span> <span class="pop">Orange</span></h1>
+    <h1 class="home"><span class="light">Flagrant</span> <span class="pop">Orange</span></h1>
   <% end %>
   <h2 class="link"><%= link_to 'Music', music_path %></h2>
   <h2 class="active">Shows</h2>
