--- a/app/views/music/index.html.erb
+++ b/app/views/music/index.html.erb
@@ -18,16 +18,13 @@
   <h2 class="link"><%= link_to 'Contact', contact_path %></h2>
 </div>
 
-<div class="row soundcloud">
-  <iframe width="100%" scrolling="no" height="450" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/292463638&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-</div>
-
 <% if @songs.any? %>
   <div class="row shows text-center">
-    <h2 class="active text-center">Lyrics</h2>
+    <h2 class="active text-center">Music</h2>
     <hr>
     <% @songs.each do |song| %>
       <h3 class="show-lyrics"><%= song.title %></h3>
+      <%= audio_tag(song.audio, controls: true) %>
       <div class="lyrics">
         <p><%= song.lyrics %><p>
       </div>
