--- a/app/views/music/index.html.erb
+++ b/app/views/music/index.html.erb
@@ -39,3 +39,5 @@
 <div class="row shows">
   <%= image_tag 'bw5.jpg', class: 'regular-image' %>
 </div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jplayer/2.9.2/add-on/jplayer.playlist.js"></script>
