--- a/app/views/music/index.html.erb
+++ b/app/views/music/index.html.erb
@@ -20,7 +20,7 @@
 
 <% if @songs.any? %>
   <div class="row shows text-center">
-    <h2 class="active text-center">Lyrics</h2>
+    <h2 class="active text-center">Music</h2>
     <hr>
     <% @songs.each do |song| %>
       <div class="lyric-display">
