--- a/app/views/music/index.html.erb
+++ b/app/views/music/index.html.erb
@@ -26,7 +26,7 @@
       <div class="lyric-display">
         <h3 class="show-lyrics"><%= song.title %></h3>
         <% if song.audio.present? %>
-          <%= audio_tag(song.audio, controls: true) %>
+          <%= audio_tag(song.audio, controls: true, controlsList: "nodownload") %>
         <% end %>
         <div class="lyrics">
           <p><%= song.lyrics %><p>
