--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,14 +3,12 @@
 <div class="home">
   <%= image_tag 'bw2.jpg', class: 'home-image' %>
   <div class="navigation">
-    <h1><span class="light">Flagrant</span> <span class="pop">Orange</span></h1>
+    <h1>
+      <%= image_tag "logo.png", class: "home-logo" %>
+      <span class="light">lagrant</span> <span class="pop">Orange</span>
+    </h1>
     <h2 class="link"><%= link_to 'Music', music_path %></h2>
     <h2 class="link"><%= link_to 'Shows', shows_path %></h2>
     <h2 class="link"><%= link_to 'Contact', contact_path %></h2>
   </div>
 </div>
-
-
-<!--links -->
-<!--move up to be on picture-->
-<!--move to top or bottom for mobile view -->
