--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -1,22 +1,5 @@
 <% content_for(:title, "Flagrant Orange | Contact") %>
-
-<div class="regular-navigation">
-  <%= link_to root_path do %>
-    <h1 class="home"><span class="light">Flagrant</span> <span class="pop">Orange</span></h1>
-  <% end %>
-  <h2 class="link"><%= link_to 'Music', music_path %></h2>
-  <h2 class="link"><%= link_to 'Shows', shows_path %></h2>
-  <h2 class="active">Contact</h2>
-</div>
-
-<div class="mobile-navigation">
-  <%= link_to root_path do %>
-    <h1 class="home"><span class="light">Flagrant</span> <span class="pop">Orange</span></h1>
-  <% end %>
-  <h2 class="link"><%= link_to 'Music', music_path %></h2>
-  <h2 class="link"><%= link_to 'Shows', shows_path %></h2>
-  <h2 class="active">Contact</h2>
-</div>
+<%= render "shared/navigation" %>
 
 <%= content_tag(:h2, notice, class: 'notice') if notice %>
 
