--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
 @import "helpers";
 @import "animations";
 @import "home";
+@import "navigation";
 
 body {
   background-color: $color-pop;
@@ -137,7 +138,6 @@ body {
     padding: 2%;
   }
   h1 {
-    padding: 0;
     margin-bottom: 10px;
     .pop {
       color: $dark;
