--- a/app/views/shared/_regular_navigation.html.erb
+++ b/app/views/shared/_regular_navigation.html.erb
@@ -1,6 +1,6 @@
 <div class="regular-navigation">
   <%= link_to root_path do %>
-    <h1 class="home"><span class="light">Flagrant</span> <span class="pop">Orange</span></h1>
+    <%= image_tag "logo.png", class: "navigation-logo" %>
   <% end %>
   <h2 class="link"><%= active_link_to "Music", music_path %></h2>
   <h2 class="link"><%= active_link_to "Shows", shows_path %></h2>
