Add bandcamp download link

--- a/app/assets/stylesheets/_fonts.scss
+++ b/app/assets/stylesheets/_fonts.scss
@@ -57,7 +57,7 @@ a {
   color: inherit;
   text-decoration: none;
   &:hover {
-    color: $md-grey;
+    color: #EAEAEA;
     cursor: pointer;
   }
 }
