--- a/app/views/music/index.html.erb
+++ b/app/views/music/index.html.erb
@@ -19,6 +19,10 @@
         </div>
       </div>
     <% end %>
+    <hr>
+    <%= link_to "https://flagrantorange.bandcamp.com" do %>
+      <h3>Downloads available on Bandcamp</h3>
+    <% end %>
   </div>
 <% end %>
 
