Add media quote and new image

--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -22,5 +22,5 @@
   </div>
 </div>
 <div class="row shows">
-  <%= image_tag 'bw4.jpg', class: 'regular-image' %>
+  <%= image_tag 'full_band_bw_1.jpg', class: 'regular-image' %>
 </div>
