--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -6,7 +6,8 @@
 <div class="row shows">
   <div class="col-4 contact">
     <h2>Social</h2>
-      <%= link_to image_tag("fb.png", class: 'icon'), "https://www.facebook.com/FlagrantOrange/" %>
+      <%= link_to image_tag("fb-blue.png", class: "icon--wide"), "https://www.facebook.com/FlagrantOrange/" %>
+      <%= link_to image_tag("instagram.png", class: "icon"), "https://www.instagram.com/flagrantorange/" %>
   </div>
   <div class="col-4 contact">
     <h2>Booking</h2>
@@ -22,5 +23,5 @@
   </div>
 </div>
 <div class="row shows">
-  <%= image_tag 'full_band_bw_1.jpg', class: 'regular-image' %>
+  <%= image_tag "full_band_5.jpg", class: "regular-image" %>
 </div>
