--- a/app/views/shows/index.html.erb
+++ b/app/views/shows/index.html.erb
@@ -18,5 +18,5 @@
   <% end %>
 </div>
 <div class="row shows">
-  <%= image_tag 'bw6.jpg', class: 'regular-image' %>
+  <%= image_tag "full_band_3.jpg", class: "regular-image" %>
 </div>
