--- a/app/assets/stylesheets/_helpers.scss
+++ b/app/assets/stylesheets/_helpers.scss
@@ -170,3 +170,15 @@
   justify-content: flex-end;
   align-items: flex-end;
 }
+
+$styles: margin padding;
+$directions: left right top bottom;
+
+@each $style in $styles {
+  @for $i from 0 through 50 {
+    .#{$style}-#{$i} { #{$style}: #{$i}px; }
+    @each $direction in $directions {
+      .#{$style}-#{$direction}-#{$i} { #{$style}-#{$direction}: #{$i}px }
+    }
+  }
+}
