--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,16 +1,8 @@
 <% content_for(:title, "Flagrant Orange") %>
+<%= render "shared/navigation" %>
 
 <div class="home">
-  <%= image_tag 'bw2.jpg', class: 'home-image' %>
-  <div class="navigation">
-    <h1>
-      <%= image_tag "logo.png", class: "home-logo" %>
-      <span class="light">lagrant</span> <span class="pop">Orange</span>
-    </h1>
-    <h2 class="link"><%= link_to 'Music', music_path %></h2>
-    <h2 class="link"><%= link_to 'Shows', shows_path %></h2>
-    <h2 class="link"><%= link_to 'Contact', contact_path %></h2>
-  </div>
+  <%= image_tag "full_band_2.jpg", class: "home-image" %>
 </div>
 
 <%= render "shared/footer" %>
