--- a/app/views/shared/_mobile_navigation.html.erb
+++ b/app/views/shared/_mobile_navigation.html.erb
@@ -5,7 +5,8 @@
       <span class="light">lagrant</span> <span class="pop">Orange</span>
     </h1>
   <% end %>
+  <h2 class="link"><%= active_link_to "About", about_path %></h2>
   <h2 class="link"><%= active_link_to "Music", music_path %></h2>
-  <h2 class="link"><%= active_link_to 'Shows', shows_path %></h2>
-  <h2 class="link"><%= active_link_to 'Contact', contact_path %></h2>
+  <h2 class="link"><%= active_link_to "Shows", shows_path %></h2>
+  <h2 class="link"><%= active_link_to "Contact", contact_path %></h2>
 </div>
