--- a/app/views/shared/_regular_navigation.html.erb
+++ b/app/views/shared/_regular_navigation.html.erb
@@ -1,7 +1,11 @@
 <div class="regular-navigation">
   <%= link_to root_path do %>
-    <%= image_tag "logo.png", class: "navigation-logo" %>
+    <h1 class="link">
+      <%= image_tag "logo.png", class: "home-logo" %>
+      <span class="light">lagrant</span> <span class="pop">Orange</span>
+    </h1>
   <% end %>
+  <h2 class="link"><%= active_link_to "About", about_path %></h2>
   <h2 class="link"><%= active_link_to "Music", music_path %></h2>
   <h2 class="link"><%= active_link_to "Shows", shows_path %></h2>
   <h2 class="link"><%= active_link_to "Contact", contact_path %></h2>
