Various front end changes
* Images smaller across the board

* About page in newsletter style

* Nav styling changes, making it the same on
all pages

* Moves navigation styling into its own file

--- a/app/assets/stylesheets/_helpers.scss
+++ b/app/assets/stylesheets/_helpers.scss
@@ -171,6 +171,8 @@
   align-items: flex-end;
 }
 
+// Margin and padding
+
 $styles: margin padding;
 $directions: left right top bottom;
 
@@ -181,4 +183,25 @@ $directions: left right top bottom;
       .#{$style}-#{$direction}-#{$i} { #{$style}-#{$direction}: #{$i}px }
     }
   }
+}
+
+// Floats
+
+.float-right {
+  float: right;
+}
+
+.float-left {
+  float: left;
+}
+
+.clear-both {
+  clear: both
+}
+
+// Alignment
+
+%centered {
+  margin-left: auto;
+  margin-right: auto;
 }
