--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,2 +1,14 @@
-<%= render "shared/regular_navigation" %>
-<%= render "shared/mobile_navigation" %>
+<div class="navigation navigation--home">
+  <%= link_to root_path do %>
+    <h1>
+      <%= image_tag "logo.png", class: "home-logo" %>
+      <span class="light">lagrant</span> <span class="pop">Orange</span>
+    </h1>
+  <% end %>
+  <div class="navigation-links">
+    <h2 class="link"><%= active_link_to "About", about_path %></h2>
+    <h2 class="link"><%= active_link_to "Music", music_path %></h2>
+    <h2 class="link"><%= active_link_to "Shows", shows_path %></h2>
+    <h2 class="link"><%= active_link_to "Contact", contact_path %></h2>
+  </div>
+</div>
