--- a/app/views/shows/index.html.erb
+++ b/app/views/shows/index.html.erb
@@ -6,12 +6,7 @@
     <h2 class="active text-center">Upcoming</h2>
     <hr>
     <% @shows.each do |show| %>
-    <h3><%= show.beautified_date %></h3>
-    <h3><%= show.where %></h3>
-    <% if show.description %>
-    <p><%= show.description %></p>
-    <% end %>
-    <hr>
+      <%= render "shows/show", show: show %>
     <% end %>
   <% else %>
     <h2 class="active text-center">Check back soon for show dates!</h2>
@@ -20,3 +15,13 @@
 <div class="row shows">
   <%= image_tag "full_band_3.jpg", class: "regular-image" %>
 </div>
+
+<% if @past_shows.any? %>
+  <div class="row shows text-center">
+    <h2 class="active text-center">Past Shows</h2>
+    <hr>
+    <% @past_shows.each do |show| %>
+      <%= render "shows/show", show: show %>
+    <% end %>
+  </div>
+<% end %>
