--- a/app/views/shows/_show.html.erb
+++ b/app/views/shows/_show.html.erb
@@ -1,6 +1,6 @@
 <h3><%= show.beautified_date %></h3>
 <h3><%= show.where %></h3>
 <% if show.description %>
-  <p><%= show.description %></p>
+  <p><%= simple_format(show.description) %></p>
 <% end %>
 <hr>
